[package]
name = "rush"
description = "A posixy shell implemented in Rust with minimal external dependencies."
version = "0.1.0"
edition = "2021"
authors = ["Lasiotus"]
license = "MIT OR Apache-2.0"

[dependencies]
glob = "0.3.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
panic = "abort"
lto = "fat"
strip = true
codegen-units = 1
